wp_derive/tests/error_missing_sparse_prefix_from_wp_contextual.rs
use wp_derive::WPContextual;

#[derive(WPContextual)]
pub struct Foo {}

fn main() {}

uniffi::setup_scaffolding!("wp_derive");
